# pharmacyscraper

./: .coverage  .detect-secrets.report  .env.example  .gitignore  CHANGELOG.md  CLASSIFICATION_MODULE_PROMPT.md  CONTRIBUTING.md  LICENSE  Makefile  ORCHESTRATOR_TESTING_PROMPT.md  PROJECT_PLAN.md  README.md  apify_results.json  aug10todo.md  cascade.json  debug_env_loading.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pharmacy-project-digest.md  project-cleanup-todo.md  pytest.ini  reclassify_cached_sample.py  requirements-dev.txt  requirements.txt  run_production_pipeline.py  run_test_pipeline.py  setup.cfg  setup.py  setup_env_and_run.sh  sitecustomize.py  test_output.txt  test_quick_classification.py  test_rule.py  workflow_report.md
.api_cache/: api_usage.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
config/: denver_one_off.json  example_config.json  locations_from_csv.json  locations_maps_discovery.json  phoenix_config.json  schema.json  trial_config.json  trial_config_20240619.json
data/: final_consolidated_report.txt
docs/: AI_INTERACTION_SOP.md  CLASSIFICATION.md  DEVELOPMENT.md  PRODUCTION_PIPELINE.md  SCHEMA.md  TESTING.md  TESTING_METHODOLOGY.md  filtering_system.md  migration-config-v1-to-unified.md  trial_run_20240619.md
dotenv/: __init__.py
examples/: orchestrator_config.json  run_orchestrator.py
hypothesis_local/: __init__.py
openai/: __init__.py
output/: pharmacies_AZ_phoenix.json  pharmacies_CA_san_francisco.json  pharmacies_CA_test_city.json  pharmacies_NH_nashua.json  pharmacies_NH_portsmouth.json  pharmacies_TX_austin.json  pharmacies_TX_houston.json  pharmacies_VT_bennington.json  pharmacies_VT_burlington.json  (+13 more)
(+820 files in other folders)
