[metadata]
description-file = README.md
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options.package_data]
* = *.json, *.yaml, *.yml, *.csv

[options.packages.find]
where = .
include = pharmacy_scraper*

# No console scripts - using direct script execution
# See scripts/ directory for available commands

[flake8]
max-line-length = 88
extend-ignore = E203, W503
per-file-ignores =
    # Allow import * in __init__.py files
    __init__.py: F403,F405
    # Allow unused imports in __init__.py files
    __init__.py: F401
    # Allow unused variables in tests
    tests/*.py: F841

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
show_error_context = True
show_column_numbers = True

[coverage:run]
source = pharmacy_scraper
omit = 
    */tests/*
    */__pycache__/*
    */_version.py

[coverage:report]
exclude_lines =
    # pragma: no cover
    def __repr__
    raise NotImplementedError
    raise ImportError
    if __name__ == .__main__.:
    pass
    raise

[test]
addopts = -v --cov=pharmacy_scraper --cov-report=term-missing --cov-report=xml:coverage.xml
python_files = test_*.py
